apps/dev/paperless/paperless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-web
  namespace: paperless
  labels:
    app: paperless
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: paperless
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      nodeSelector:
        kubernetes.io/hostname: nxk3-w01
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.2.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: paperless.stadthagen.dev
            initialDelaySeconds: 120
            periodSeconds: 10
            failureThreshold: 36
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: paperless.stadthagen.dev
            initialDelaySeconds: 300
            periodSeconds: 30
            failureThreshold: 6
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 2Gi
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: export
              mountPath: /usr/src/paperless/export
            - name: consume
              mountPath: /usr/src/paperless/consume
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: export
          persistentVolumeClaim:
            claimName: paperless-export
        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume
